gcc/testsuite/rust/rustc/ui/issues/issue-51602.rs
fn main(){
    if i in 1..10 {
// { dg-error "" "" { target *-*-* } .-1 }
        break;
    }
}

